# iagon-py

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
examples/: minswap_fund10_download.py  minswap_fund10_upload.py
src/iagon/: __init__.py  base.py
tests/: test_adapter.py
